<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/int_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/ic_open_left_corner_bg"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_myapp_logo"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_star" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_7sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingTop="@dimen/_2sdp"
            android:paddingBottom="@dimen/_2sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/bold"
                android:text="@string/continue_to_app"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/txt_myapp_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:marqueeRepeatLimit="marquee_forever"
                android:textColor="#000"
                android:textSize="@dimen/_12sdp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/_35sdp"
            android:layout_height="match_parent"
            android:padding="@dimen/_5sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/ic_open_top_corner_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_15sdp"
            android:layout_gravity="top|center_vertical|center_horizontal|center"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:fontFamily="@font/bold"
            android:gravity="top"
            android:text="@string/advertisement"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp">

            <ImageView
                android:id="@+id/ivMedia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name"
                android:adjustViewBounds="true" />

            <Button
                android:id="@+id/btnRedirect"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_alignParentBottom="true"
                android:layout_marginHorizontal="@dimen/_70sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/ic_ads_btn_bg"
                android:fontFamily="@font/regular"
                android:gravity="center"
                android:text="@string/install_now"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
