<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivMedia"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true"
        android:contentDescription="@string/install_now"
        android:scaleType="fitXY" />

    <Button
        android:id="@+id/btnRedirect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_70sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/ic_ads_btn_bg"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/install_now"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/llAds"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/ic_open_left_corner_bg"
            android:backgroundTint="@color/red"
            android:gravity="center"
            android:rotation="180">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:fontFamily="@font/bold"
                android:paddingHorizontal="@dimen/_7sdp"
                android:rotation="180"
                android:text="@string/ad"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_100sdp"
            app:cardElevation="@dimen/_2sdp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:orientation="horizontal"
                android:padding="@dimen/_6sdp">

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/regular"
                    android:gravity="center"
                    android:minWidth="@dimen/_20sdp"
                    android:minHeight="@dimen/_20sdp"
                    android:text="@string/_5_seconds_remaining"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13ssp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/ivClose"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:src="@drawable/ic_close"
                    android:padding="@dimen/_2sdp"
                    android:contentDescription="@string/install_now"
                    app:tint="@color/black" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</RelativeLayout>